--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "autoprefixer-core": "^4.0.2",
+    "bower": "^1.4.1",
     "browser-sync": "^1.8.2",
     "del": "^1.1.1",
     "gulp": "^3.6.0",
