--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower": "^1.4.1",
     "browser-sync": "^1.8.2",
     "del": "^1.1.1",
+    "fs": "0.0.2",
     "gulp": "^3.6.0",
     "gulp-cache": "^0.2.2",
     "gulp-clean": "^0.3.1",
@@ -16,6 +17,7 @@
     "gulp-csso": "^0.2.6",
     "gulp-eco": "0.0.2",
     "gulp-filter": "^2.0.2",
+    "gulp-foreach": "^0.1.0",
     "gulp-if": "^1.2.1",
     "gulp-ignore": "^1.2.1",
     "gulp-imagemin": "^2.0.0",
@@ -23,6 +25,7 @@
     "gulp-load-plugins": "^0.8.0",
     "gulp-minify-html": "^0.1.6",
     "gulp-postcss": "^3.0.0",
+    "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-size": "^1.1.0",
@@ -31,6 +34,7 @@
     "gulp-useref": "^1.0.2",
     "jshint-stylish": "^1.0.0",
     "main-bower-files": "^2.6.2",
+    "merge-stream": "^0.1.7",
     "opn": "^1.0.0",
     "rendr": "^1.0.2",
     "wiredep": "^2.0.0",
