--- a/package.json
+++ b/package.json
@@ -4,40 +4,42 @@
     "node": ">=0.10.0"
   },
   "devDependencies": {
-    "autoprefixer-core": "^4.0.2",
+    "autoprefixer-core": "^5.2.0",
     "bower": "^1.4.1",
-    "browser-sync": "^1.8.2",
-    "del": "^1.1.1",
+    "browser-sync": "^2.7.6",
+    "del": "^1.2.0",
     "fs": "0.0.2",
-    "gulp": "^3.6.0",
-    "gulp-cache": "^0.2.2",
+    "gulp": "^3.9.0",
+    "gulp-cache": "^0.2.9",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.2",
-    "gulp-csso": "^0.2.6",
+    "gulp-csso": "^1.0.0",
     "gulp-eco": "0.0.2",
     "gulp-filter": "^2.0.2",
     "gulp-foreach": "^0.1.0",
-    "gulp-if": "^1.2.1",
+    "gulp-if": "^1.2.5",
     "gulp-ignore": "^1.2.1",
-    "gulp-imagemin": "^2.0.0",
-    "gulp-jshint": "^1.5.3",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-minify-html": "^0.1.6",
-    "gulp-postcss": "^3.0.0",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-jshint": "^1.11.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-html": "^1.0.3",
+    "gulp-postcss": "^5.1.8",
     "gulp-print": "^1.1.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-size": "^1.1.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-useref": "^1.0.2",
-    "jshint-stylish": "^1.0.0",
-    "main-bower-files": "^2.6.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "gulp-shell": "^0.4.2",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-useref": "^1.2.0",
+    "jshint-stylish-source": "^1.0.5",
+    "main-bower-files": "^2.8.0",
     "merge-stream": "^0.1.7",
-    "opn": "^1.0.0",
-    "rendr": "^1.0.2",
-    "wiredep": "^2.0.0",
+    "opn": "^1.0.2",
+    "rendr": "^1.0.5",
+    "wiredep": "^2.2.2",
+    "yargs": "^3.10.0",
     "yuglify": "^0.1.4"
   }
 }
