--- a/package.json
+++ b/package.json
@@ -8,21 +8,19 @@
     "bower": "^1.4.1",
     "browser-sync": "^2.7.6",
     "del": "^1.2.0",
+    "flatten-packages": "^0.1.4",
     "fs": "0.0.2",
     "gulp": "^3.9.0",
-    "gulp-cache": "^0.2.9",
-    "gulp-clean": "^0.3.1",
-    "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-csso": "^1.0.0",
     "gulp-eco": "0.0.2",
     "gulp-filter": "^2.0.2",
     "gulp-foreach": "^0.1.0",
-    "gulp-if": "^1.2.5",
     "gulp-ignore": "^1.2.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.11.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.1.6",
     "gulp-minify-html": "^1.0.3",
     "gulp-postcss": "^5.1.8",
     "gulp-print": "^1.1.0",
@@ -36,6 +34,7 @@
     "jshint-stylish-source": "^1.0.5",
     "main-bower-files": "^2.8.0",
     "merge-stream": "^0.1.7",
+    "merge2": "^0.3.5",
     "opn": "^1.0.2",
     "rendr": "^1.0.5",
     "wiredep": "^2.2.2",
