--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-shell": "^0.4.2",
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-task-listing": "^1.0.1",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.2.0",
     "jshint-stylish-source": "^1.0.5",
