--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-  "version": "1.1",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -12,6 +11,7 @@
     "flatten-packages": "^0.1.4",
     "fs": "0.0.2",
     "gulp": "^3.9.0",
+    "gulp-coffee": "2.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-csso": "^1.0.0",
     "gulp-eco": "0.0.2",
