--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "main-bower-files": "^2.8.0",
     "merge-stream": "^0.1.7",
     "merge2": "^0.3.5",
+    "node-sass": "~3.2.0",
     "opn": "^1.0.2",
+    "optipng-bin": "~3.0.2",
     "rendr": "^1.0.5",
     "wiredep": "^2.2.2",
     "yargs": "^3.10.0",
-    "yuglify": "^0.1.4"
+    "yuglify": "^0.1.4",
+    "optipng": "~0.2.1"
   }
 }
