--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
 Django==1.7.8
 argparse==1.2.1
 coverage==3.7.1
-django-bootstrap3==5.3.1
 django_compressor==1.4
 django-debug-toolbar==1.2.1
 django-filter==0.9.2
+django-pylibmc==0.6.0
 django-pyodbc-azure==1.2.1
 djangorestframework==3.1
+factory_boy==2.5.2
 markdown==2.6.1
+pyodbc==3.0.10
+python-memcached==1.57
 pytz==2014.7
 requests==2.7.0
 rollbar==0.9.9
 sqlparse==0.1.13
 git+https://github.com/wharton/django-base-theme
-https://pyodbc.googlecode.com/files/pyodbc-3.0.7.zip
