--- a/package.json
+++ b/package.json
@@ -4,46 +4,39 @@
     "node": ">=0.10.0"
   },
   "devDependencies": {
-    "autoprefixer-core": "^5.2.0",
-    "bower": "^1.4.1",
-    "browser-sync": "^2.7.6",
-    "del": "^1.2.0",
-    "flatten-packages": "^0.1.4",
+    "autoprefixer": "^6.3.1",
+    "babel-preset-es2015": "~6.3.13",
+    "babel-preset-react": "~6.3.13",
+    "babelify": "~7.2.0",
+    "bower": "^1.7.2",
+    "browser-sync": "^2.11.1",
+    "browserify": "~13.0.0",
+    "es6-promise": "~3.0.2",
     "fs": "0.0.2",
     "gulp": "^3.9.0",
-    "gulp-coffee": "2.3.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-csso": "^1.0.0",
-    "gulp-eco": "0.0.2",
-    "gulp-filter": "^2.0.2",
-    "gulp-foreach": "^0.1.0",
-    "gulp-ignore": "^1.2.1",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jshint": "^1.11.0",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.6",
-    "gulp-minify-html": "^1.0.3",
-    "gulp-postcss": "^5.1.8",
-    "gulp-print": "^1.1.0",
+    "gulp-browserify": "~0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.1",
-    "gulp-shell": "^0.4.2",
-    "gulp-size": "^1.2.1",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sass": "^2.1.1",
+    "gulp-shell": "^0.5.1",
     "gulp-task-listing": "^1.0.1",
-    "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^1.2.0",
+    "gulp-uglify": "^1.5.1",
     "jshint-stylish-source": "^1.0.5",
-    "main-bower-files": "^2.8.0",
-    "merge-stream": "^0.1.7",
-    "merge2": "^0.3.5",
-    "node-sass": "~3.2.0",
-    "opn": "^1.0.2",
-    "optipng-bin": "~3.0.2",
-    "rendr": "^1.0.5",
-    "wiredep": "^2.2.2",
-    "yargs": "^3.10.0",
-    "yuglify": "^0.1.4",
-    "optipng": "~0.2.1"
+    "main-bower-files": "^2.11.1",
+    "merge-stream": "^1.0.0",
+    "node-sass": "~3.4.2",
+    "vinyl-source-stream": "~1.1.0",
+    "yargs": "^3.32.0"
+  },
+  "dependencies": {
+    "object-assign": "^4.0.1",
+    "react": "~0.14.6",
+    "react-localstorage": "~0.2.8"
   }
 }
